--- a/pccc/assets/styles/styles.css
+++ b/pccc/assets/styles/styles.css
@@ -7125,6 +7125,26 @@ body {
   text-align: center;
 }
 /* ---------------------------------------
+    SCROLL TOP
+----------------------------------------- */
+.scrollToTop {
+  display: none;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  margin: 0;
+  z-index: 9999;
+}
+.scrollToTop a {
+  color: #ff0000;
+  font-weight: bold;
+  font-size: 11px;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding-top: 35px;
+  background: url('../images/totop.png') center top no-repeat;
+}
+/* ---------------------------------------
     TOP BANNER
 ----------------------------------------- */
 .top-banner {
@@ -8002,5 +8022,103 @@ ADMINISTRATIVE PROCEEDS PAGE
   color: #FFF;
 }
 .content-wrapper.administrative-proceeds-page .right-content .box-video {
+  padding-top: 0;
+}
+/* ---------------------------------------
+IMAGES GALLERY PAGE
+----------------------------------------- */
+.content-wrapper.images-gallery-page .main-content .box {
+  border: none;
+  margin-bottom: 0;
+}
+.content-wrapper.images-gallery-page .main-content .box .panel-heading {
+  border: none;
+  background-color: #dd0000;
+  height: 38px;
+}
+.content-wrapper.images-gallery-page .main-content .box .panel-heading .box-header {
+  color: #fff;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content {
+  border: 1px solid #ddd;
+  border-top: none;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content .item .img {
+  padding-bottom: 10px;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content .item .title {
+  color: #058041;
+  line-height: 17px;
+  font-size: 13px;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content .item .title:hover {
+  color: red;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content .pagination {
+  margin: 15px 0;
+  float: right;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content .pagination li a,
+.content-wrapper.images-gallery-page .main-content .box .box-content .pagination li span {
+  border-radius: 50%;
+  margin: 0 5px;
+  color: #6b6b6b;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content .pagination li.active a {
+  background-color: #dd0000;
+  border-color: #dd0000;
+  color: #FFF;
+}
+.content-wrapper.images-gallery-page .main-content .box .box-content .pagination li:hover a {
+  background-color: #dd0000;
+  border-color: #dd0000;
+  color: #FFF;
+}
+.content-wrapper.images-gallery-page .right-content .box-video {
+  padding-top: 0;
+}
+/* ---------------------------------------
+CONTACT PAGE
+----------------------------------------- */
+.content-wrapper.contact-page .main-content .box {
+  border: none;
+  margin-bottom: 0;
+}
+.content-wrapper.contact-page .main-content .box .panel-heading {
+  border: none;
+  background-color: #dd0000;
+  height: 38px;
+}
+.content-wrapper.contact-page .main-content .box .panel-heading .box-header {
+  color: #fff;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+}
+.content-wrapper.contact-page .main-content .box .box-content {
+  border: 1px solid #ddd;
+  border-top: none;
+  color: #000;
+  font-size: 13px;
+}
+.content-wrapper.contact-page .main-content .box .box-content .title {
+  font-weight: 700;
+  color: #ff0000;
+}
+.content-wrapper.contact-page .main-content .box .box-content .table-title {
+  font-weight: 700;
+  color: #000;
+}
+.content-wrapper.contact-page .main-content .box .box-content table thead th {
+  text-align: center;
+  width: 33%;
+}
+.content-wrapper.contact-page .main-content .box .box-content table tbody td {
+  text-align: left;
+}
+.content-wrapper.contact-page .right-content .box-video {
   padding-top: 0;
 }
