--- a/pccc/assets/less/main.less
+++ b/pccc/assets/less/main.less
@@ -1194,4 +1194,104 @@ CONTACT PAGE
     }
 }
 
+/* ---------------------------------------
+DETAIL PAGE
+----------------------------------------- */
+
+.content-wrapper {
+    &.detail-page {
+        .main-content {
+            .box {
+                border: none;
+                margin-bottom: 0;
+                .panel-heading {
+                    border: none;
+                    background-color: #dd0000;
+                    height: 38px;
+                    .box-header {
+                        color: #fff;
+                        text-align: left;
+                        font-size: 14px;
+                        font-weight: 700;
+                    }
+                }
+                .box-content{
+                    border: 1px solid #ddd;
+                    border-top: none;
+                    color: #000;
+                    font-size: 13px;
+                    text-align: left;
+                    font-family: 'Arial';
+                    .detail-content {
+                        .title {
+                            font-weight: 700;
+                            color: #000;
+                        }
+                        .date {
+                            font-style: italic;
+                            color: #000;
+                            font-size: 13px;
+                            line-height: 36px;
+                        }
+                        .img-wrapper {
+                            text-align: center;
+                            img {
+                                width: 100%;
+                            }
+                            em {
+                                line-height: 36px;
+                            }
+                        }
+                        .author {
+                            float: right;
+                            font-weight: 700;
+                        }
+                    }
+                    .related {
+                        .title {
+                            font-family: Verdana, Geneva, sans-serif;
+                            padding-top: 25px;
+                            padding-bottom: 10px;
+                            text-transform: uppercase;
+                            border-bottom: 1px solid #6b6b6b;
+                            color: #ff0000;
+                            font-weight: 500;
+
+                        }
+                        .related-item {
+                            text-align: left;
+                            padding-top: 15px;
+                            ul {
+                                li {
+                                    padding: 10px 0;
+                                    border-bottom: dashed 1px #ddd;
+                                    line-height: 20px;
+                                    a {
+                                        color: #058041;
+                                        text-transform: uppercase;
+                                        &:hover {
+                                            color: red;
+                                        }
+                                    }
+                                    .fa {
+                                        padding-right: 10px;
+                                        color: #058041;
+                                        font-size: 8px;
+                                    }
+                                    display: block;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .right-content {
+            .box-video {
+                padding-top: 0;
+            }
+        }
+    }
+}
+
 
