--- a/pccc/assets/less/main.less
+++ b/pccc/assets/less/main.less
@@ -61,6 +61,9 @@ body {
         width: 100%;
         height: 100%;
     }
+    @media (max-width: 858px) {
+        display: none;
+    }
 }
 
 /* ---------------------------------------
