--- a/pccc/assets/styles/styles.css
+++ b/pccc/assets/styles/styles.css
@@ -7154,6 +7154,11 @@ body {
   width: 100%;
   height: 100%;
 }
+@media (max-width: 858px) {
+  .top-banner {
+    display: none;
+  }
+}
 /* ---------------------------------------
     MAIN MENU
 ----------------------------------------- */
